@@ -22,6 +22,7 @@ Version 1.0.xxx (April xxth 2013)
 - Implemented: Push Button switch type (sends an ON command, with option to specify Off delay)
 - Changed: Better day value calculation for meter devices
 - Implemented: Raspberry Pi onboard temperature sensor
+- Fixed: Meter value dupplication checked now performed for actual day
 
 Version 1.0.412 (April 1th 2013)
 - Fixed: Siren icon on dashboard
